# cob_hardware_test

./: README.md  stack.xml
cob_bringup_test/: CMakeLists.txt  mainpage.dox  manifest.xml  my_cob4.test  package.xml
cob_bringup_test/components/: base.test  base.test.xml  calibration.test  calibration.test.xml  calibration_sim.test  component.test.xml  dsa.test  head.test  head.test.xml  joy.test  joy.test.xml  kinect.test  laser_front.test  laser_rear.test  laser_top.test  lbr.test  lbr.test.xml  light.test  lwa.test  lwa.test.xml  pike_left.test  pike_right.test  prosilica_left.test  prosilica_right.test  relayboard.test  sdh.test  sdh.test.xml  sensorring.test  sound.test  sound.test.xml  tactile.test  tactile.test.xml  teleop.test  teleop.test.xml  teleop_keyboard.test  teleop_keyboard.test.xml  torso.test  torso.test.xml  tray.test  tray.test.xml  (+5 more)
cob_bringup_test/config/: sensorring.yaml
cob_bringup_test/config/cob3-2/: base.yaml  cam3d.yaml  prosilica_right.yaml
cob_bringup_test/config/cob3-3/: arm.yaml  tray.yaml
cob_bringup_test/config/cob3-4/: head.yaml  prosilica_left.yaml  sdh.yaml
cob_bringup_test/config/cob3-6/: tray.yaml
cob_bringup_test/config/cob3-7/: teleop.yaml  torso.yaml
cob_bringup_test/config/cob4-1/: all_components_test.yaml  arm_left.yaml  arm_right.yaml  daily_show_test.yaml  head.yaml  laser_left.yaml  laser_right.yaml  sensorring.yaml  torso.yaml  torso_cam3d_left.yaml  torso_cam3d_right.yaml
cob_bringup_test/config/cob4-2/: all_components_test.yaml  daily_show_test.yaml
cob_bringup_test/drivers/: base.test  base.test.xml  base_long_time.test  base_long_time.test.xml  component.test  component.test.xml  component_long_time.test  component_long_time.test.xml  hz.test.xml  joy.test  light.test  light.test.xml  sensor.test  sound.test  teleop.test  teleop.test.xml  teleop_keyboard.test
cob_bringup_test/launch/: base.launch  component_test_all.launch  daily_morning_show.launch
cob_bringup_test/robots/: cob3-1_auto.test.xml  cob3-1_manual.test.xml  cob3-2_auto.test.xml  cob3-2_manual.test.xml  cob3-3_auto.test.xml  cob3-3_manual.test.xml  cob3-4_auto.test.xml  cob3-4_manual.test.xml  cob3-5_auto.test.xml  cob3-5_manual.test.xml  cob3-6_auto.test.xml  cob3-6_manual.test.xml  cob3-7_auto.test.xml  cob3-7_manual.test.xml  cob4-1_auto.test.xml  cob4-1_manual.test.xml  desire_auto.test.xml  desire_manual.test.xml  raw3-1_auto.test.xml  raw3-1_manual.test.xml  raw3-2_auto.test.xml  raw3-2_manual.test.xml  raw3-3_auto.test.xml  raw3-3_manual.test.xml  raw3-4_auto.test.xml  raw3-4_manual.test.xml  raw3-5_auto.test.xml  raw3-5_manual.test.xml  raw3-6_auto.test.xml  raw3-6_manual.test.xml  robot.test  robot_auto.test  robot_auto_sim.test  robot_manual.test  robot_sim.test
cob_devices_test/: CMakeLists.txt  README.md  package.xml
cob_devices_test/config/: Inbetriebnahme.rviz  base_laser_front.yaml  base_laser_left.yaml  base_laser_right.yaml
cob_devices_test/launch/: base.launch  head.launch  sensorring.launch  torso.launch
cob_devices_test/scripts/: test_light.py  udev_cob.sh  udev_joy.sh  udev_s300.sh
cob_hardware_test/: CMakeLists.txt  manifest.xml  package.xml
cob_hardware_test_core/: CMakeLists.txt  mainpage.dox  package.xml  setup.py
cob_hardware_test_core/src/dialog_client/: dialog.py  dialog_client.py
cob_hardware_test_core/test/: base_long_time_test.py  base_test.py  calibration_test.py  component_long_time_test.py  component_test.py  component_test_all.py  daily_morning_show.py  helper.py  hztests  joy_test.py  life_test.py  light_test.py  sensor_test_all_threaded.py  sound_test.py  tactile_test.py  teleop_test.py
cob_hardware_test_src/: manifest.xml
cob_hardware_test_src/src/: dialog.py  dialog_client.py
cob_hardware_test_src/test/: joy_test.py
cob_test_rigs/: CMakeLists.txt  README.md  package.xml
cob_test_rigs/launch/: cob4_base.launch  component.xml  fdm.launch  head3.launch  rqt_plot.sh  run_fdm_test.launch  sensorring.launch  single_elmo.launch  single_schunk.launch  torso2.launch
cob_test_rigs/robots/fdm/: base_controller.yaml
cob_test_rigs/robots/fdm/config/: base_controller.yaml  base_driver.yaml  fdm_controller.yaml  fdm_driver.yaml
cob_test_rigs/robots/fdm/urdf/: fdm.urdf.xacro
cob_test_rigs/robots/head3/config/: head3_configurations.yaml  head3_controller.yaml
cob_test_rigs/robots/head3/urdf/: head3.urdf.xacro
cob_test_rigs/robots/sensorring/config/: sensorring_configurations.yaml
cob_test_rigs/robots/sensorring/urdf/: sensorring.urdf.xacro
cob_test_rigs/robots/single/config/: single_controller.yaml  single_elmo_driver.yaml  single_schunk_driver.yaml
cob_test_rigs/robots/single/urdf/: single.urdf.xacro
cob_test_rigs/robots/torso2/config/: torso2_configurations.yaml  torso2_controller.yaml  torso2_driver.yaml
cob_test_rigs/robots/torso2/urdf/: torso2.urdf.xacro
cob_test_rigs/scripts/: test_components.py  test_fdm.py  test_single_sine.py
