<package>
  <name>cob_bringup_test</name>
  <version>0.1.0</version>
  <description>This package provides test launch files for testing Care-O-bot hardware.</description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_bringup_test</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>roslaunch</build_depend>
 
  <run_depend>cob_bringup</run_depend>
  <run_depend>cob_hardware_test_core</run_depend>


  <export>

  </export>
</package>
